devtools/tests/should_fail/unknown_proof_step.p
fof(conj, conjecture, $true).

fof(s0, plain, [], inference(notTrue, [s1])).
